# ChangeLog for x11-plugins/wmmenu
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmenu/ChangeLog,v 1.6 2005/11/11 09:20:20 s4t4n Exp $

  11 Nov 2005; Michele Noberasco <s4t4n@gentoo.org> wmmenu-1.2-r1.ebuild:
  Removed COPYING from dodoc.

  27 Sep 2005; Luis Medinas <metalgod@gentoo.org> wmmenu-1.2-r1.ebuild:
  Added ~amd64 keyword. Closes bug #107121.

  26 Sep 2005; Michele Noberasco <s4t4n@gentoo.org> wmmenu-1.2-r1.ebuild:
  Apparently this works nicely enough with whatever version of libdockapp :-(

*wmmenu-1.2-r1 (26 Sep 2005)

  26 Sep 2005; Michele Noberasco <s4t4n@gentoo.org> wmmenu-1.2-r1.ebuild:
  Revision bump, directly as stable, updating libdockapp dependancy. Closes bug #105530.
  wmmenu-1.2.ebuild:
  Wiped out older version.

  24 Jan 2005; Michele Noberasco <s4t4n@gentoo.org> wmmenu-1.2.ebuild:
  Fix Copyright header. Stable for x86.

*wmmenu-1.2 (22 Dec 2004)

  22 Dec 2004; Michele Noberasco <s4t4n@gentoo.org> wmmenu-1.2.ebuild:
  Initial import. Thanks to Matt Taylor. Closes #74712.