@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/wmnetload
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmnetload/ChangeLog,v 1.26 2006/01/09 21:07:24 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmnetload/ChangeLog,v 1.27 2006/01/15 17:56:34 nelchael Exp $
+
+  15 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org>
+  wmnetload-1.3-r2.ebuild:
+  Fixed DEPEND for libdockapp.
 
   09 Jan 2006; Daniel Black <dragonheart@gentoo.org>
   +files/wmnetload-1.3-norpath.patch, wmnetload-1.3-r2.ebuild:
