@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/wmmenu
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmenu/ChangeLog,v 1.6 2005/11/11 09:20:20 s4t4n Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmmenu/ChangeLog,v 1.7 2006/01/15 17:57:41 nelchael Exp $
+
+  15 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> wmmenu-1.2-r1.ebuild:
+  Fixed DEPEND for libdockapp.
 
   11 Nov 2005; Michele Noberasco <s4t4n@gentoo.org> wmmenu-1.2-r1.ebuild:
   Removed COPYING from dodoc.
